--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 <body>
     <header class="header-content">
         <div class="header-content__wrapper page-container">
+            <button class="mobile-menu-button" type="button" data-menu-open>
+                <svg class="mobile-menu-button__icon">
+                    <use href="./images/svg/icons.svg#icon-menu-burger">
+
+                    </use>
+                </svg>
+            </button>
             <nav class="header-nav">
                 <a class="logo header-content__logo" href="./index.html">
                 <span class="logo__text-blue">Web</span>Studio</a>
@@ -452,6 +459,23 @@
         </form>
         </div>
     </div>
+
+    <div class="mobile-menu-window is-hidden">
+        <nav>
+            <ul class="mobile-menu" >
+                <li class="mobile-menu__item">
+                    <a href="" class="mobile-menu__link"></a>
+                </li>
+                <li class="mobile-menu__item">
+                    <a href="" class="mobile-menu__link"></a>
+                </li>
+                <li class="mobile-menu__item">
+                    <a href="" class="mobile-menu__link"></a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    >
     
     <script src="./js/modal.js"></script>
 </body>
