--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                 <nav class="mobile-menu-nav">
                     <ul class="mobile-menu-list">
                         <li class="mobile-menu-list__item">
-                            <a class="mobile-menu-list__link" href="#">Студия</a>
+                            <a class="mobile-menu-list__link" href="./index.html">Студия</a>
                         </li>
                         <li class="mobile-menu-list__item">
-                            <a class="mobile-menu-list__link" href="#">Портфолио</a>
+                            <a class="mobile-menu-list__link" href="./portfolio.html">Портфолио</a>
                         </li>
                         <li class="mobile-menu-list__item">
                             <a class="mobile-menu-list__link" href="#">Контакты</a>
