--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,58 @@
                     </li>
                 </ul>
             </div>
+        <!-- Mobile menu -->
+        <button class="mobile-menu-button" type="button" data-menu-open>
+            <svg class="mobile-menu-button__icon" width="40" height="40">
+                <use href="./images/svg/icons.svg#icon-burger">
         
+                </use>
+            </svg>
+        </button>
+        <div class="mobile-menu" data-menu>
+            <div class="container mobile-menu-container">
+                <button class="mobile-menu-close-btn" data-menu-close>
+                    <svg class="mobile-menu-close-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-button-x"></use>
+                    </svg>
+                </button>
+                <nav class="mobile-menu-nav">
+                    <ul class="mobile-menu-list">
+                        <li class="mobile-menu-list__item">
+                            <a class="mobile-menu-list__link" href="./index.html">Студия</a>
+                        </li>
+                        <li class="mobile-menu-list__item">
+                            <a class="mobile-menu-list__link" href="./portfolio.html">Портфолио</a>
+                        </li>
+                        <li class="mobile-menu-list__item">
+                            <a class="mobile-menu-list__link" href="#">Контакты</a>
+                        </li>
+                    </ul>
+                    <ul class="mobile-menu__contacts">
+                        <li class="mobile-menu__contact">
+                            <a class="mobile-menu__contact-link" href="#">+38 096 111 11 11</a>
+                        </li>
+                        <li class="mobile-menu__contact">
+                            <a class="mobile-menu__contact-link" href="#">info@devstudio.com</a>
+                        </li>
+                    </ul>
+                    <ul class="mobile-menu__social-list">
+                        <li class="mobile-menu__social-list-item">
+                            <a class="mobile-menu__social-list-item-link" href="#">Instagram</a>
+                        </li>
+                        <li class="mobile-menu__social-list-item">
+                            <a class="mobile-menu__social-list-item-link" href="#">Twitter</a>
+                        </li>
+                        <li class="mobile-menu__social-list-item">
+                            <a class="mobile-menu__social-list-item-link" href="#">Facebook</a>
+                        </li>
+                        <li class="mobile-menu__social-list-item">
+                            <a class="mobile-menu__social-list-item-link" href="#">LinkedIn</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
         </header>
     <main>
     <!-- Section examples -->
@@ -272,6 +323,8 @@
             </div>
         </div>
     </footer>
+        <script src="./js/modal.js"></script>
+        <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
