--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
                 <ul class="team-list">
                     <li class="team-list__item">
                     <picture>
-                            <source srcset="./images/team/team1.jpeg 1x, ./images/team/team1-2x.jpg 2x" media="min-width: 1200px">
-                            <source srcset="./images/team/team1-tablet.jpg 1x, ./images/team/team1-tablet2x.jpg 2x" media="min-width: 768px">
+                            <source srcset="./images/team/team1.jpg 1x, ./images/team/team1-2x.jpg 2x" media="(min-width: 1200px)">
+                            <source srcset="./images/team/team1-tablet.jpg 1x, ./images/team/team1-tablet2x.jpg 2x" media="(min-width: 768px)">
                             <source srcset="./images/team/team1-mobile.jpg 1x, ./images/team/team1-mobile2x.jpg 2x">
                             <img class="team-list__item-image" 
-                            src="./images/team/team1.jpg " alt="Фото Игоря Демьяненко" width="270">
+                            src="./images/team/team1-mobile.jpg " alt="Фото Игоря Демьяненко" width="270">
                     </picture>
                         
                         <div class="team-list_item-description">
@@ -218,8 +218,8 @@
                     </li>
                     <li class="team-list__item">
                         <picture>
-                            <source srcset="./images/team/team2.jpeg 1x, ./images/team/team2-2x.jpg 2x" media="min-width: 1200px">
-                            <source srcset="./images/team/team2-tablet.jpg 1x, ./images/team/team2-tablet2x.jpg 2x" media="min-width: 768px">
+                            <source srcset="./images/team/team2.jpg 1x, ./images/team/team2-2x.jpg 2x" media="(min-width:1200px)">
+                            <source srcset="./images/team/team2-tablet.jpg 1x, ./images/team/team2-tablet2x.jpg 2x" media="(min-width:768px)">
                             <source srcset="./images/team/team2-mobile.jpg 1x, ./images/team/team2-mobile2x.jpg 2x">
                             <img class="team-list__item-image" src="./images/team/team2.jpg" alt="Фото Ольги Репиной" width="270">
                         </picture>
@@ -263,8 +263,8 @@
                     </li>
                     <li class="team-list__item">
                         <picture>
-                            <source srcset="./images/team/team3.jpeg 1x, ./images/team/team3-2x.jpg 2x" media="min-width: 1200px">
-                            <source srcset="./images/team/team3-tablet.jpg 1x, ./images/team/team3-tablet2x.jpg 2x" media="min-width: 768px">
+                            <source srcset="./images/team/team3.jpg 1x, ./images/team/team3-2x.jpg 2x" media="(min-width: 1200px)">
+                            <source srcset="./images/team/team3-tablet.jpg 1x, ./images/team/team3-tablet2x.jpg 2x" media="(min-width: 768px)">
                             <source srcset="./images/team/team3-mobile.jpg 1x, ./images/team/team3-mobile2x.jpg 2x">
                             <img class="team-list__item-image" src="./images/team/team3.jpg" alt="Фото Николая Тарасова" width="270">
                         </picture>
@@ -309,8 +309,8 @@
                     </li>
                     <li class="team-list__item">
                         <picture>
-                            <source srcset="./images/team/team4.jpeg 1x, ./images/team/team4-2x.jpg 2x" media="min-width: 1200px">
-                            <source srcset="./images/team/team4-tablet.jpg 1x, ./images/team/team4-tablet2x.jpg 2x" media="min-width: 768px">
+                            <source srcset="./images/team/team4.jpg 1x, ./images/team/team4-2x.jpg 2x" media="(min-width: 1200px)">
+                            <source srcset="./images/team/team4-tablet.jpg 1x, ./images/team/team4-tablet2x.jpg 2x" media="(min-width: 768px)">
                             <source srcset="./images/team/team4-mobile.jpg 1x, ./images/team/team4-mobile2x.jpg 2x">
                             <img class="team-list__item-image" src="./images/team/team4.jpg" alt="Фото Михаила Ермакова" width="270">
                         </picture>
