--- a/portfolio.html
+++ b/portfolio.html
@@ -81,10 +81,10 @@
                     </ul>
                     <ul class="mobile-menu__contacts">
                         <li class="mobile-menu__contact">
-                            <a class="mobile-menu__contact-link" href="#">+38 096 111 11 11</a>
+                            <a class="mobile-menu__contact-link1" href="#">+38 096 111 11 11</a>
                         </li>
                         <li class="mobile-menu__contact">
-                            <a class="mobile-menu__contact-link" href="#">info@devstudio.com</a>
+                            <a class="mobile-menu__contact-link2" href="#">info@devstudio.com</a>
                         </li>
                     </ul>
                     <ul class="mobile-menu__social-list">
@@ -133,7 +133,12 @@
                 <li class="examples-list__item">
                     <a class="examples-list__item-link" href="./">
                         <div class="examples-list__item-image-wrapper">
-                            <img class="examples-list__item-image" src="./images/webtechnokriak.jpeg" alt="Пример веб-сайта технокряк">
+                            <picture>
+                                <source srcset="./images/portfolio/pimg1.jpg 1x, ./images/portfolio/pimg1-2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./images/portfolio/pimg1-tablet.jpg 1x, ./images/portfolio/pimg1-tablet2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./images/portfolio/pimg1-mobile.jpg 1x, ./images/portfolio/pimg1-mobile2x.jpg 2x">
+                                <img class="examples-list__item-image" src="./images/portfolio/pimg1.jpg " alt="Пример веб-сайта технокряк">
+                            </picture>
                             <p class="examples-list__item-hint">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
@@ -146,7 +151,12 @@
                 <li class="examples-list__item">
                     <a class="examples-list__item-link" href="./">
                         <div class="examples-list__item-image-wrapper">
-                            <img class="examples-list__item-image" src="./images/posterneworlean.jpeg" alt="Пример дизайна постера">
+                            <picture>
+                                <source srcset="./images/portfolio/pimg2.jpg 1x, ./images/portfolio/pimg2-2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./images/portfolio/pimg2-tablet.jpg 1x, ./images/portfolio/pimg2-tablet2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./images/portfolio/pimg2-mobile.jpg 1x, ./images/portfolio/pimg2-mobile2x.jpg 2x">
+                                <img class="examples-list__item-image" src="./images/portfolio/pimg2.jpg " alt="Пример дизайна постера">
+                            </picture>
                             <p class="examples-list__item-hint">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
@@ -159,7 +169,13 @@
                 <li class="examples-list__item">
                     <a class="examples-list__item-link" href="./">
                         <div class="examples-list__item-image-wrapper">
-                            <img class="examples-list__item-image" src="./images/restaurantseafood.jpeg" alt="Пример приложения для ресторана">
+                            <picture>
+                                <source srcset="./images/portfolio/pimg3.jpg 1x, ./images/portfolio/pimg3-2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./images/portfolio/pimg3-tablet.jpg 1x, ./images/portfolio/pimg3-tablet2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/portfolio/pimg3-mobile.jpg 1x, ./images/portfolio/pimg3-mobile2x.jpg 2x">
+                                <img class="examples-list__item-image" src="./images/portfolio/pimg3.jpg " alt="Пример приложения для ресторана">
+                            </picture>
                             <p class="examples-list__item-hint">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
@@ -172,7 +188,13 @@
                 <li class="examples-list__item">
                     <a class="examples-list__item-link" href="./">
                         <div class="examples-list__item-image-wrapper">
-                            <img class="examples-list__item-image" src="./images/projectprime.jpeg" alt="Пример маркетингового проекта">
+                            <picture>
+                                <source srcset="./images/portfolio/pimg4.jpg 1x, ./images/portfolio/pimg4-2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./images/portfolio/pimg4-tablet.jpg 1x, ./images/portfolio/pimg4-tablet2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/portfolio/pimg4-mobile.jpg 1x, ./images/portfolio/pimg4-mobile2x.jpg 2x">
+                                <img class="examples-list__item-image" src="./images/portfolio/pimg4.jpg " alt="Пример приложения для ресторана">
+                            </picture>
                             <p class="examples-list__item-hint">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
@@ -185,7 +207,13 @@
                 <li class="examples-list__item">
                     <a class="examples-list__item-link" href="./">
                         <div class="examples-list__item-image-wrapper">
-                            <img class="examples-list__item-image" src="./images/projectboxes.jpeg" alt="Пример проекта коробочки">
+                            <picture>
+                                <source srcset="./images/portfolio/pimg5.jpg 1x, ./images/portfolio/pimg5-2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./images/portfolio/pimg5-tablet.jpg 1x, ./images/portfolio/pimg5-tablet2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/portfolio/pimg5-mobile.jpg 1x, ./images/portfolio/pimg5-mobile2x.jpg 2x">
+                                <img class="examples-list__item-image" src="./images/portfolio/pimg5.jpg " alt="Пример проекта коробочки">
+                            </picture>
                             <p class="examples-list__item-hint">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
@@ -198,7 +226,13 @@
                 <li class="examples-list__item">
                     <a class="examples-list__item-link" href="./">
                         <div class="examples-list__item-image-wrapper">
-                            <img class="examples-list__item-image" src="./images/inspiration.jpeg" alt="Пример веб-сайта">
+                            <picture>
+                                <source srcset="./images/portfolio/pimg6.jpg 1x, ./images/portfolio/pimg6-2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./images/portfolio/pimg6-tablet.jpg 1x, ./images/portfolio/pimg6-tablet2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/portfolio/pimg6-mobile.jpg 1x, ./images/portfolio/pimg6-mobile2x.jpg 2x">
+                                <img class="examples-list__item-image" src="./images/portfolio/pimg6.jpg " alt="Пример веб-сайта">
+                            </picture>
                             <p class="examples-list__item-hint">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
@@ -211,7 +245,13 @@
                 <li class="examples-list__item">
                     <a class="examples-list__item-link" href="./">
                         <div class="examples-list__item-image-wrapper">
-                            <img class="examples-list__item-image" src="./images/limitededition.jpeg" alt="Пример дизайна издания">
+                            <picture>
+                                <source srcset="./images/portfolio/pimg7.jpg 1x, ./images/portfolio/pimg7-2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./images/portfolio/pimg7-tablet.jpg 1x, ./images/portfolio/pimg7-tablet2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/portfolio/pimg7-mobile.jpg 1x, ./images/portfolio/pimg7-mobile2x.jpg 2x">
+                                <img class="examples-list__item-image" src="./images/portfolio/pimg7.jpg " alt="ример дизайна издания">
+                            </picture>
                             <p class="examples-list__item-hint">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
@@ -224,7 +264,13 @@
                 <li class="examples-list__item">
                     <a class="examples-list__item-link" href="./">
                         <div class="examples-list__item-image-wrapper">
-                            <img class="examples-list__item-image" src="./images/projectlab.jpeg" alt="Пример проекта лаб">
+                            <picture>
+                                <source srcset="./images/portfolio/pimg8.jpg 1x, ./images/portfolio/pimg8-2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./images/portfolio/pimg8-tablet.jpg 1x, ./images/portfolio/pimg8-tablet2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/portfolio/pimg8-mobile.jpg 1x, ./images/portfolio/pimg8-mobile2x.jpg 2x">
+                                <img class="examples-list__item-image" src="./images/portfolio/pimg8.jpg " alt="Пример проекта лаб">
+                            </picture>
                             <p class="examples-list__item-hint">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
@@ -237,7 +283,13 @@
                 <li class="examples-list__item">
                     <a class="examples-list__item-link" href="./">
                         <div class="examples-list__item-image-wrapper">
-                            <img class="examples-list__item-image" src="./images/growingbusiness.jpeg" alt="Примера приложения для бизнеса">
+                            <picture>
+                                <source srcset="./images/portfolio/pimg9.jpg 1x, ./images/portfolio/pimg9-2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./images/portfolio/pimg9-tablet.jpg 1x, ./images/portfolio/pimg9-tablet2x.jpg 2x"
+                                    media="(min-width: 768px)">
+                                <source srcset="./images/portfolio/pimg9-mobile.jpg 1x, ./images/portfolio/pimg9-mobile2x.jpg 2x">
+                                <img class="examples-list__item-image" src="./images/portfolio/pimg9.jpg " alt="Примера приложения для бизнеса">
+                            </picture>
                             <p class="examples-list__item-hint">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                                 платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                         </div>
